objects/LeadsManager__Leads_Manager__c.object
<CustomObject>
    <description>Master object to hold unique companies related to various leads.</description>
    <fields>
        <fullName>Additional_Company_Sites__c</fullName>
        <label>Additional Company Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Intent__c</fullName>
        <label>Campaign Intent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Contact</fullName>
                </value>
                <value>
                    <fullName>Maybe Contact</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Leads_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Date__c</fullName>
        <label>Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Specific__c</fullName>
        <label>Lead Source Specific</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeadsManager__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Company_Name__c</fullName>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadsManager__ContactAccountName__c</fullName>
        <label>Contact Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Custom_Field__c</fullName>
        <label>Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadsManager__FirstActivityDate__c</fullName>
        <label>First Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__LastActivityDate__c</fullName>
        <description>This field shows closest Activity History.</description>
        <inlineHelpText>Last Activity</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LastfilteredDate__c</fullName>
        <inlineHelpText>Populate this value using your own filtered activities from custom setting.</inlineHelpText>
        <label>Last Activity Date (filtered)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LeadOwner__c</fullName>
        <label>Leads Owner (Multiselect)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LeadOwner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__LeadStatus__c</fullName>
        <inlineHelpText>Please specify status order in custom settings to see this field value in your specified order.</inlineHelpText>
        <label>Leads Status (Multiselect)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__Lead_Source__c</fullName>
        <label>Company Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Press/News</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Tradeshow/Conference</fullName>
                </value>
                <value>
                    <fullName>Search Engine</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Data.com- email</fullName>
                </value>
                <value>
                    <fullName>www.borregosolar.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__LeadsOwner__c</fullName>
        <label>Leads Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LeadsSources__c</fullName>
        <label>Leads Sources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LeadsStatus__c</fullName>
        <label>Leads Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NextActivityDate__c</fullName>
        <description>This is closest open task.</description>
        <inlineHelpText>Next Activity</inlineHelpText>
        <label>Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NumberOfActivities__c</fullName>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NumberOfEmployees__c</fullName>
        <label>Number Of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NumberOfLeads__c</fullName>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__ParentLeadCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>LeadsManager__Leads_Manager__c</referenceTo>
        <relationshipName>Leads_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeadsManager__PrimaryNAICS__c</fullName>
        <label>Primary NAICS</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__PrimaryNaicsDesc__c</fullName>
        <label>Primary NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__PrimarySIC__c</fullName>
        <label>Primary SIC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__PrimarySicDesc__c</fullName>
        <label>Primary SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__State__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact Attempted</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted, unreached</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted, abandoned</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Contacted, Long Term</fullName>
                </value>
                <value>
                    <fullName>Wrong Person with Company</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
                <value>
                    <fullName>Contacted, ongoing</fullName>
                </value>
                <value>
                    <fullName>Company Unqualified</fullName>
                </value>
                <value>
                    <fullName>PD will not call</fullName>
                </value>
                <value>
                    <fullName>Contact Stage 1</fullName>
                </value>
                <value>
                    <fullName>Contact Stage 2</fullName>
                </value>
                <value>
                    <fullName>Contact Stage 3</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Never Reached</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Interviewed</fullName>
                </value>
                <value>
                    <fullName>Online Assessment Sent</fullName>
                </value>
                <value>
                    <fullName>References/Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Eliminated</fullName>
                </value>
                <value>
                    <fullName>Out of Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeadsManager__TotalUnreadLeads__c</fullName>
        <label>Total Unread Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LeadsManager__ZIP__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leads_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AP+T</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>Bear Valley Electric</fullName>
                </value>
                <value>
                    <fullName>Central Hudson G&amp;E</fullName>
                </value>
                <value>
                    <fullName>ConEd</fullName>
                </value>
                <value>
                    <fullName>CPAU</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>Healdsburg</fullName>
                </value>
                <value>
                    <fullName>IID</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
                <value>
                    <fullName>LIPA</fullName>
                </value>
                <value>
                    <fullName>National Grid</fullName>
                </value>
                <value>
                    <fullName>NSTAR</fullName>
                </value>
                <value>
                    <fullName>NYSEG</fullName>
                </value>
                <value>
                    <fullName>Oncor</fullName>
                </value>
                <value>
                    <fullName>Other - East Coast</fullName>
                </value>
                <value>
                    <fullName>Other - Northern CA</fullName>
                </value>
                <value>
                    <fullName>Other - Southern CA</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E</fullName>
                </value>
                <value>
                    <fullName>PREPA</fullName>
                </value>
                <value>
                    <fullName>PSNH</fullName>
                </value>
                <value>
                    <fullName>Rochester Gas &amp; Electric</fullName>
                </value>
                <value>
                    <fullName>Rockland &amp; Orange</fullName>
                </value>
                <value>
                    <fullName>Roseville Electric</fullName>
                </value>
                <value>
                    <fullName>SCE</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E</fullName>
                </value>
                <value>
                    <fullName>SMUD</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>COLD_Leads_Leads_Manager</fullName>
        <columns>LeadsManager__NumberOfActivities__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Leads Queue</label>
        <language>en_US</language>
        <queue>Leads_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DQL_Queue_Leads_Manager</fullName>
        <filterScope>Queue</filterScope>
        <label>DQL Queue</label>
        <queue>DQL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HOT_Leads_Leads_Manager</fullName>
        <filterScope>Queue</filterScope>
        <label>MQL</label>
        <queue>MQL_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeadsManager__All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>LeadsManager__Industry__c</columns>
        <columns>Branch__c</columns>
        <columns>LeadsManager__Phone__c</columns>
        <columns>LeadsManager__Company_Name__c</columns>
        <columns>LeadsManager__Website__c</columns>
        <columns>LeadsManager__AnnualRevenue__c</columns>
        <columns>LeadsManager__Lead_Source__c</columns>
        <columns>Lead_Source_Specific__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LeadsManager__NumberOfActivities__c</columns>
        <columns>LeadsManager__NumberOfLeads__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LeadsManager__My_Leads</fullName>
        <columns>NAME</columns>
        <columns>LeadsManager__Industry__c</columns>
        <columns>Branch__c</columns>
        <columns>LeadsManager__Phone__c</columns>
        <columns>LeadsManager__Company_Name__c</columns>
        <columns>LeadsManager__Website__c</columns>
        <columns>LeadsManager__AnnualRevenue__c</columns>
        <columns>LeadsManager__Lead_Source__c</columns>
        <columns>Lead_Source_Specific__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>langam</value>
        </filters>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LeadsManager__New_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>LeadsManager__Industry__c</columns>
        <columns>LeadsManager__Lead_Source__c</columns>
        <columns>LeadsManager__Phone__c</columns>
        <columns>LeadsManager__Website__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LeadsManager__NextActivityDate__c</columns>
        <columns>LeadsManager__NumberOfLeads__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LeadsManager__Todays</fullName>
        <columns>NAME</columns>
        <columns>LeadsManager__Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays</label>
    </listViews>
    <listViews>
        <fullName>Out_of_Market_Leads_Queue_Leads_Manager</fullName>
        <filterScope>Queue</filterScope>
        <label>Out-of-Market Leads Queue</label>
        <queue>Out_of_Market_Leads_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>